--- a/finite.tex
+++ b/finite.tex
@@ -765,7 +765,7 @@ The main result about \((\moduli{fg})^\wedge_\Gamma\) is due to Lubin and Tate:
 Suppose that \(\height \Gamma < \infty\) for \(\Gamma\) a formal group over \(k\) a perfect field of positive characteristic \(p\).  The functor \((\moduli{fg})^\wedge_\Gamma\) is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme over \(\W_p(k)\) of dimension \((\height(\Gamma) - 1)\).
 \end{theorem}
 
-\begin{remark}[{\cite[Theorem 4.35]{ZinkCartierTheory}}]
+\begin{remark}[{\cite[Theorem 4.35]{ZinkCartierTheory}}]\label{UnivPropertyOfWittRing}
 The presence of the \index{Witt vectors}\textit{\(p\)--local Witt ring} \(\W_p(k)\) is explained by its universal property: for \(k\) as above and \(R\) an infinitesimal thickening of \(k\), \(\W_p(k)\) has the lifting property\footnote{Rings with such lifting properties are generally called \index{Cohen ring}\textit{Cohen rings}.  In the case that \(k\) is a perfect field of positive characteristic \(p\), the Witt ring \(\W_p(k)\) happens to model a Cohen ring for \(k\).}
 \begin{center}
 \begin{tikzcd}
