--- a/cooperations.tex
+++ b/cooperations.tex
@@ -196,11 +196,11 @@ We now apply this philosophy to our example:
 \begin{proof}
 First, we compute \(\ast\)--indecomposable quotient of the unstable dual Steenrod algebra to be
 \begin{align*}
-Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{a_{I} \middle| \text{\(I\) a multi-index}\right\} \\
-& = \F_2\left\{ a_{(I_0)} \circ a_{(I_1)} \circ \cdots \circ a_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}. \\
+Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{\alpha_{I} \middle| \text{\(I\) a multi-index}\right\} \\
+& = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}. \\
 & \cong \F_2[\xi_0, \xi_1, \xi_2, \ldots],
 \end{align*}
-where we have translated to our previous notation by writing \(\xi_j\) for \(a_{(j)}\) and juxtaposition for \(\circ\)--product.  From here, sequences of additive unstable cooperations which are intertwined by suspension are exactly elements of the sequential colimit that inverts the homology suspension element.  We have already explicitly identified this element as \(a_{(0)} = \xi_0\), and this yields the claim.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}
+where we have translated to our previous notation by writing \(\xi_j\) for \(a_{(j)}\) and juxtaposition for \(\circ\)--product.  From here, sequences of additive unstable cooperations which are intertwined by suspension are exactly elements of the sequential colimit that inverts the homology suspension element.  We have already explicitly identified this element as \(\alpha_{(0)} = \xi_0\), and this yields the claim.\footnote{As a reminder, the graded unstable element \(e \in H_1 S^1\) contributes to stable degree \(1 - 1 = 0\).}
 \end{proof}
 
 Our last goal in this Lecture is to sketch a foothold that this example has furnished us with for the algebro-geometric interpretation of unstable cooperations.  First, we should remark that it has been shown that there is no manifestation of the homology of a space as any kind of classical comodule~\cite[Theorem 9.4]{BJW}, so we are unable to directly pursue an analogue of \Cref{FHGivesComodules} presenting the homology of a space as a Cartesian quasicoherent sheaf over some object.  This no-go result is quite believable from the perspective of cohomology operations: we have calculated in the case of \(E = \HFtwo\) that a generic unstable cohomology operation takes the form \[x \mapsto \sum_{\text{\(S\) a set of multi-indices}} \left(c_S \cdot \prod_{I \in S} \Sq^I(x)\right).\]  This inherently uses the multiplicative structure on \(\HFtwo^*(X)\), and the proof of the result of Boardman, Johnson, and Wilson rests entirely on the observation that decomposable elements cannot be mapped to indecomposable elements by maps of algebras, but maps of modules have no such control.\footnote{It is probably still possible to treat this carefully enough to cast the whole of unstable operations (and, in particular, the comonad \(G\)) into algebro-geometric language.}
@@ -1121,10 +1121,10 @@ K_*(BS^1[p^j]) \arrow{ru} & & K_* BS^1, \arrow{ll}{\partial}
 where again \(\partial = 0\) and hence \(K_*(BS^1[p^j])\) is presented as the kernel of the map ``cap with \([p^j](x)\)''.  We will revisit this duality in the next Case Study.
 \end{remark}
 
-With this in hand, the analysis of the bar spectral sequence proceeds very much analogously to the example of the unstable dual Steenrod algebra of \Cref{UnstableContextsSection}.  We will analyze what \emph{must} happen in the bar spectral sequence \[\Tor^{K_* S^1[p^j]}_{*, *}(K_*, K_*) \Rightarrow K_* BS^1[p^j]\] in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by a noncanonical isomorphism \[K_* \OS{H(S^1[p^j])}{0} \cong K_* \OS{H\Z/p^j}{0} = K_*[[1]] / ([1]^{p^j} - 1) = K_*[[1] - [0]] / \<[1] - [0]\>^{p^j}.\]  The \(\Tor\)--algebra for this truncated polynomial algebra \(K_*[a_\emptyset] / a_\emptyset^{p}\) is then given by the formula \[\Tor^{K_*[a_\emptyset] / a_\emptyset^{p^j}}_{*, *}(K_*, K_*) = \Lambda[a'_\emptyset] \otimes \Gamma[a_\emptyset],\] the combination of an exterior algebra and a divided power algebra.\footnote{In Ravenel--Wilson~\cite[Lemma 6.6]{RavenelWilsonKthyOfEMSpaces}, the elements \(a_\emptyset\) and \(a'_\emptyset\) are identified as a \idxentry{transpotence} and a \idxentry{homology suspension} respectively.}  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
+With this in hand, the analysis of the bar spectral sequence proceeds very much analogously to the example of the unstable dual Steenrod algebra of \Cref{UnstableContextsSection}.  We will analyze what \emph{must} happen in the bar spectral sequence \[\Tor^{K_* S^1[p^j]}_{*, *}(K_*, K_*) \Rightarrow K_* BS^1[p^j]\] in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by a noncanonical isomorphism \[K_* \OS{H(S^1[p^j])}{0} \cong K_* \OS{H\Z/p^j}{0} = K_*[[1]] / ([1]^{p^j} - 1) = K_*[[1] - [0]] / \<[1] - [0]\>^{p^j}.\]  The \(\Tor\)--algebra for this truncated polynomial algebra \(K_*[\alpha_{()}] / \alpha_{()}^{p}\) is then given by the formula \[\Tor^{K_*[\alpha_{()}] / \alpha_{()}^{p^j}}_{*, *}(K_*, K_*) = \Lambda[\alpha'_{()}] \otimes \Gamma[\alpha_{()}],\] the combination of an exterior algebra and a divided power algebra.\footnote{In Ravenel--Wilson~\cite[Lemma 6.6]{RavenelWilsonKthyOfEMSpaces}, the elements \(\alpha_{()}\) and \(\alpha'_{()}\) are identified as a \idxentry{transpotence} and a \idxentry{homology suspension} respectively.}  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
 \begin{align*}
-d(a_\emptyset)^{[p^{jd}]} & = a'_\emptyset, \\
-\Rightarrow d(a_\emptyset)^{[i + p^{jd}]} & = a'_\emptyset \cdot a_\emptyset^{[i]}.
+d(\alpha_{()})^{[p^{jd}]} & = \alpha'_{()}, \\
+\Rightarrow d(\alpha_{()})^{[i + p^{jd}]} & = \alpha'_{()} \cdot \alpha_{()}^{[i]}.
 \end{align*}
 The spectral sequence collapses after this differential.  In the case \(1 < j < \infty\), there are some hidden multiplicative extensions in the spectral sequence, but these too are all determined by already knowing the multiplicative structure on \(K_* \OS{H(S^1[p^j])}{1}\).
 
@@ -1141,16 +1141,16 @@ This is a consequence of the fiber sequence \[K(\Q, q) \to K(\Q/\Z_{(p)}, q) \to
 Thinking of \(K(\Z, q+1)\) as \(B^q S^1\), one can also think of this theorem as giving a \(p\)--adic equivalence between \(B^q(S^1[p^\infty])\) and \(B^q S^1\)---i.e., the prime--to--\(p\) parts of \(S^1\) do not matter for \(p\)--adic homotopy theory.
 \end{remark}
 
-We use this to continue the analysis of the case \(q = 1\) and \(j = \infty\), where the Lemma gives \(B(S^1[p^\infty]) = \CP^\infty\).  The bar spectral sequence of interest then takes the form \[\Tor^{K_* S^1}_{*, *}(K_*, K_*) \Rightarrow K_* \CP^\infty.\]  The input algebra \(K_* S^1\) is exterior on a single generator in odd degree, and so its \(\Tor\)--algebra is linearly dual to a power series algebra on a single generator in even degree.  Since all of its input is even, this spectral sequence collapses immediately.
+We use this to continue the analysis of the case \(q = 1\) and \(j = \infty\), where the Lemma gives \(B(S^1[p^\infty]) = \CP^\infty\).  The bar spectral sequence of interest then takes the form \[\Tor^{K_* S^1}_{*, *}(K_*, K_*) \Rightarrow K_* \CP^\infty.\]  The input algebra \(K_* S^1\) is exterior on a single generator in odd degree, and so its \(\Tor\)--algebra is linearly dual to a power series algebra on a single generator in even degree.  Since all of its input is even, this spectral sequence collapses immediately.\footnote{Thinking of this as the limiting ``\(j \to \infty\)'' instance of the family of examples above is a great opportunity to meditate on the role of odd-dimensional classes in homotopy theory.}
 
-There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at \(j = \infty\) records that \(\CP^\infty_K\) is a formal variety, and the spectral sequences at the finite values \(1 \le j < \infty\) encode in their differentials the behavior of the map \(p^j\co \Gamma \to \Gamma\) on functions---indeed, this appears to be the entire job of \(a'_\emptyset\).  Lastly, we notice that the \(E_\infty\) page of each finite-range spectral sequence includes into the spectral sequence at \(j = \infty\), and moreover this filtration is exhaustive: every term in the \(j = \infty\) spectral sequence appears at some \(j < \infty\) stage.  Since this last property is about the \(E_\infty\) pages, it is really a property of the formal group \(\Gamma\), which we record in a definition:
+There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at \(j = \infty\) records that \(\CP^\infty_K\) is a formal variety, and the spectral sequences at the finite values \(1 \le j < \infty\) encode in their differentials the behavior of the map \(p^j\co \Gamma \to \Gamma\) on functions---indeed, this appears to be the entire job of \(\alpha'_{()}\).  Lastly, we notice that the \(E_\infty\) page of each finite-range spectral sequence includes into the spectral sequence at \(j = \infty\), and moreover this filtration is exhaustive: every term in the \(j = \infty\) spectral sequence appears at some \(j < \infty\) stage.  Since this last property is about the \(E_\infty\) pages, it is really a property of the formal group \(\Gamma\), which we record in a definition:
 
 \begin{definition}[{\cite[Definition 4.1]{GrothendieckCristaux}}]\label{DefnPDivGp}
 A \index{p divisible group@\(p\)--divisible group}\textit{\(p\)--divisible group}\footnote{Some like to call these \index{Barsotti--Tate group|see {\(p\)--divisible group}}\textit{Barsotti--Tate groups}, which is probably the better name, since ``\(p\)--divisible group'' does not communicate these subtle extra properties.} over a field \(k\) is a system \(\mathbb G_j\) of finite group schemes and inclusions \(i_k^j\co \mathbb G_k \to \mathbb G_j\) for \(k < j\) which model the inclusions \(\mathbb G_j[p^k] \subseteq \mathbb G_j\).
 \end{definition}
 
 \begin{definition}
-A \(p\)--divisible group is said to be \index{p divisible group@\(p\)--divisible group!connected}\textit{connected} when its constituent subgroups \(\mathbb G_j\) are infinitesimal thickenings of \(\Spec k\).  An example of this is the sequence of torsion subgroups \(\G[p^j]\) of a formal group \(\G\).  A \emph{nonexample} of this is the sequence of constant group schemes \(\G_j = S^1[p^j]\).
+A \(p\)--divisible group is said to be \index{p divisible group@\(p\)--divisible group!connected}\textit{connected} when its constituent subgroups \(\mathbb G_j\) are infinitesimal thickenings of \(\Spec k\).  An example of this is the sequence of torsion subgroups \(\G[p^j]\) of a formal group \(\G\).  An example of a \(p\)--divisible group which is \emph{not} connected is the sequence of constant group schemes \(\G_j = S^1[p^j]\).
 \end{definition}
 
 \begin{lemma}[{\cite[Section 6.7]{GrothendieckCristaux}}]
@@ -1189,7 +1189,7 @@ If \(\mathbb G\) is a connected \(p\)--divisible group of height \(d\) and of di
 In the case where \(\mathbb G = \Gamma\) is the original height \(d\) formal group of dimension \(1\), this computes \(H^*(\Gamma; \G_a)\) to be a power series algebra on \((d-1)\) generators.  This is precisely the result we recorded by hand in \Cref{CalculationOfLTTangentSpace}.
 \end{remark}
 
-\noindent Returning to the task at hand, we assume inductively that \((\OS{H(S^1[p^\infty])}{q-1})_K\) is a connected \(p\)--divisible group of height \(\binom{d}{q-1}\) and dimension \(\binom{d-1}{q-1}\).  Since the input to the bar spectral sequence is computed by formal group cohomology (\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}, Proof of \Cref{Symmetric2CocycleLemma}), it follows that the instance computing \(K^* \OS{H(S^1[p^\infty])}{q}\) has \(E_2\)--page an even-concentrated power series algebra of dimension \[\binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  The spectral sequence therefore collapses at this page, so that \((\OS{H(S^1[p^\infty])}{q})_K\) is a formal variety of the dimension claimed.
+\noindent Returning to the task at hand, we assume inductively that \((\OS{H(S^1[p^\infty])}{q-1})_K\) is a connected \(p\)--divisible group of height \(\binom{d}{q-1}\) and dimension \(\binom{d-1}{q-1}\).  Since the input to the bar spectral sequence is computed by formal group cohomology (\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}, Proof of \Cref{Symmetric2CocycleLemma}), it follows that the instance computing \(K^* \OS{H(S^1[p^\infty])}{q}\) has as its \(E_2\)--page an even-concentrated power series algebra of dimension \[\binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  The spectral sequence therefore collapses at this page, so that \((\OS{H(S^1[p^\infty])}{q})_K\) is a formal variety of the dimension claimed.
 
 \begin{proof}[Proof of Part 2, with a gap]\renewcommand{\qedsymbol}{\relax}
 The other claims in Part 2 are formal after we check that \(\theta^q\) is an isomorphism, since the \(p\)--power--torsion structure of \[(\OS{H(S^1[p^\infty])}{q})_K\] can be read off from its Dieudonn\'e module, as can its height.  We introduce notation to analyze this statement: set \(M\) to be the Dieudonn\'e module associated to \(K_* \CP^\infty\), i.e., \[M = D(\OS{H(S^1[p^\infty])}{1}).\]  In the following diagram
@@ -1201,7 +1201,7 @@ The other claims in Part 2 are formal after we check that \(\theta^q\) is an iso
 \end{center}
 the middle map is an isomorphism.  This forces \(V\) to be a surjective endomorphism of \(M^{\wedge q} \otimes \Q/\Z_{(p)}\), and the snake lemma shows that there is an isomorphism \[\ker(V\co \Q/\Z_{(p)} \otimes M^{\wedge q} \to \Q/\Z_{(p)} \otimes M^{\wedge q}) \cong \operatorname{coker}(V\co M^{\wedge q} \to M^{\wedge q}).\]  Picking any coordinate \(x\) and considering it as an element in the curves model of the Dieudonn\'e functor, we see that the right-hand side is spanned by elements \(x \sm V^{\sm I} x\), and hence the left-hand side has \(k\)--vector--space dimension \(\binom{d-1}{q}\).
 
-By very carefully studying the bar spectral sequence, one can learn that \(\theta^q\) induces a surjection\footnote{The proof of this is quite complicated, and it rests on a pairing between the spectral sequence for \(q = 1\) and the spectral sequence at \(q - 1\), mapping to the spectral sequence for \(q\).  Remarkably, this same pairing is the main tool that powers the original approach of  Ravenel--Wilson~\cite{RavenelWilsonKthyOfEMSpaces}.  There, their program is to fix \(j = 1\) and inductively analyze \(q\) using this same pairing, then use these base cases to ground a strong induction on \(j\) and \(q\), and then finally to fix \(q\) and take the limit as \(j \to \infty\).} \[\ker V|_{\Q / \Z_{(p)} \otimes M^{\wedge q}} \to \ker V|_{D(\OS{H(S^1[p^\infty])}{q})}.\]  In fact, since these two have the same rank, \(\theta^q|_{\ker V}\) is an isomorphism on these subspaces.  This is enough to conclude that \(\theta^q\) is an injection: since the action of \(V\) is locally nilpotent, if \(\theta^q\) ever failed to be an injection then we could apply \(V\) enough times to get an example of a nontrivial element in \(\ker V|_{\Q / \Z_{(p)} \otimes M^{\wedge q}}\) mapping to zero.  Finally, to show that \(\theta^q\) is surjective, we again use the local nilpotence of \(V\) to filter \(\Q / \Z_{(p)} \otimes M^{\sm q}\) by the subspaces \(\ker V^\ell\), \(\ell \ge 1\), and it is then possible (though we omit the proof) to use our understanding of \(\ker V\) to form preimages.
+By very carefully studying the bar spectral sequence, one can learn that \(\theta^q\) induces a surjection\footnote{The proof of this is quite complicated, and it rests on a pairing between the spectral sequence for \(q = 1\) and the spectral sequence at \(q - 1\), mapping to the spectral sequence for \(q\).  Remarkably, this same pairing is the main tool that powers the original approach of  Ravenel--Wilson~\cite{RavenelWilsonKthyOfEMSpaces} and of our approach to the unstable dual Steenrod algebra in \Cref{UnstableContextsSection} (cf.\ \Cref{CircProductAndDifferentials}).  There, their program is to fix \(j = 1\) and inductively analyze \(q\) using this same pairing, then use these base cases to ground a strong induction on \(j\) and \(q\), and then finally to fix \(q\) and take the limit as \(j \to \infty\).} \[\ker V|_{\Q / \Z_{(p)} \otimes M^{\wedge q}} \to \ker V|_{D(\OS{H(S^1[p^\infty])}{q})}.\]  In fact, since these two have the same rank, \(\theta^q|_{\ker V}\) is an isomorphism on these subspaces.  This is enough to conclude that \(\theta^q\) is an injection: since the action of \(V\) is locally nilpotent, if \(\theta^q\) ever failed to be an injection then we could apply \(V\) enough times to get an example of a nontrivial element in \(\ker V|_{\Q / \Z_{(p)} \otimes M^{\wedge q}}\) mapping to zero.  Finally, to show that \(\theta^q\) is surjective, we again use the local nilpotence of \(V\) to filter \(\Q / \Z_{(p)} \otimes M^{\sm q}\) by the subspaces \(\ker V^\ell\), \(\ell \ge 1\), and it is then possible (though we omit the proof) to use our understanding of \(\ker V\) to form preimages.
 \end{proof}
 
 \begin{proof}[Proof of Part 3, mostly omitted]
@@ -1219,11 +1219,11 @@ From here, it is a matter of \emph{very} carefully pairing elements up (cf.\ \ci
 \end{proof}
 
 \begin{remark}
-\Cref{MainKThyOfEMSpacesTheorem} admits a restatement purely in terms of \index{Hopf algebra}Hopf algebras, although Dieudonn\'e theory was essential in its proof.  The cup product gives a natural map \[\Alt^q K_* \OS{H(S^1[p^j])}{1} \to K_* \OS{H(S^1[p^j])}{q},\] where ``\(\Alt\)'' refers to the alternating \index{Hopf algebra!alternating}Hopf algebra.\footnote{Note that this alternation condition becomes dramatically more complicated in the case that the formal group law and its formal group inverse series become more complicated than that of \(\G_a\).}  The main result of this section is that this map is an isomorphism for all \(q\), and indeed that the map from the free alternating Hopf \emph{ring} maps isomorphically to the topological Hopf ring.
+\Cref{MainKThyOfEMSpacesTheorem} admits a restatement purely in terms of \index{Hopf algebra}Hopf algebras, although Dieudonn\'e theory was essential in its proof.  The cup product gives a natural map \[\Alt^q K_* \OS{H(S^1[p^j])}{1} \to K_* \OS{H(S^1[p^j])}{q},\] where ``\(\Alt\)'' refers to the alternating \index{Hopf algebra!alternating}Hopf algebra.\footnote{Note that this alternation condition becomes dramatically more complicated in the case that the formal group law and its formal group inverse series become more complicated than that of \(\G_a\).}  The main result of this section is that this map is an isomorphism for all \(q\), and indeed that the map from the free alternating \emph{Hopf ring} maps isomorphically to the topological Hopf ring.
 \end{remark}
 
-\begin{remark}[{\cite[Section 3]{HopkinsLurie}, \cite{HedayatzadehGeneralCase}, \cite{HedayatzadehFieldCase}}]\label{EThyOfEMSpaces}
-Because \(K^* \OS{H\Z/p^j}{q}\) is even, you can hope to augment this to a calculation of \(E^* \OS{H\Z/p^j}{q}\) for \(E = E_\Gamma\) the associated Morava \(E\)--theory.  This is indeed possible, and the analogous formula is true at the level of Hopf algebras: \[E_* \OS{H(S^1[p^j])}{q} \cong \Alt^q E_* \OS{H(S^1[p^j])}{1}.\] However, the attendant algebraic geometry is quite complicated: you either need a form of Dieudonn\'e theory that functions over \(\context{E_\Gamma}\) (and then attempt to drag the proof above through that setting), or you need to directly confront what ``\index{p divisible group@\(p\)--divisible group!alternating power}alternating power of a \(p\)--divisible group'' means at the level of \(p\)--divisible groups (and forego all of the time-saving help afforded to you by Dieudonn\'e theory).
+\begin{remark}[{\cite[Section 3]{HopkinsLurie}, \cite{HedayatzadehFieldCase}, \cite{HedayatzadehGeneralCase}}]\label{EThyOfEMSpaces}
+Because \(K^* \OS{H\Z/p^j}{q}\) is even, you can hope to augment this to a calculation of \(E^* \OS{H\Z/p^j}{q}\) for \(E = E_\Gamma\) the associated continuous Morava \(E\)--theory.  This is indeed possible, and the analogous formula is true at the level of Hopf algebras: \[E_* \OS{H(S^1[p^j])}{q} \cong \Alt^q E_* \OS{H(S^1[p^j])}{1}.\] However, the attendant algebraic geometry is quite complicated: you either need a form of Dieudonn\'e theory that functions over \(\context{E_\Gamma}\) (and then attempt to drag the proof above through that setting), or you need to directly confront what ``\index{p divisible group@\(p\)--divisible group!alternating power}alternating power of a \(p\)--divisible group'' means at the level of \(p\)--divisible groups (and forego all of the time-saving help afforded to you by Dieudonn\'e theory).
 \end{remark}
 
 \begin{remark}[{cf.\ \Cref{StableMixedKthyCoopnsVanish}}]
