--- a/sigma.tex
+++ b/sigma.tex
@@ -4,7 +4,7 @@
 
 By this point, we have seen a great many ways that algebraic geometry exerts control over the behavior of homotopy theory, stable and unstable.  The goal in this Case Study is to explore a setting where algebraic geometry is itself tightly controlled: whereas the behavior of formal groups is quite open-ended, the behavior of \emph{abelian varieties} is comparatively strict.  We import this strictness into algebraic topology by studying complex-orientable cohomology theories \(E\) which have been tagged with an auxiliary abelian variety \(A\) and an isomorphism \(\phi\co \CP^\infty_E \cong A^\wedge_0\).  In the case that \(A\) is an elliptic curve, this is our definition of an \textit{elliptic cohomology theory}.  The idea, then, is not that this puts serious constraints on the formal group \(\CP^\infty_E\) (although it does place some), but rather that the theory of abelian varieties endows \(A\), and hence \(A^\wedge_0\), with various bits of preferred data.  This is the tack we take to construct a \emph{canonical} \(MU[6, \infty)\)--orientation of \(E\): for any complex-orientable \(E\), we identify the collection of such ring maps with ``\(\Theta\)--structures on \(\CP^\infty_E\)''; a basic theorem about abelian varieties endows the elliptic curve \(A\) with a canonical such structure; and altogether this yields the desired orientation for an elliptic spectrum.
 
-Making the identification of \(MU[6, \infty)\)--orientations with \(\Theta\)--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with \(MU[6, \infty)\) in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of \(MUP\) and \(MU\)---and use this to make an analysis of \(M\SU\).  In particular, we rely heavily on the results from \Cref{ComplexBordismChapter} and \Cref{ChapterFiniteSpectra} to understand the co/homological behaviors of \(BU \times \Z\), \(BU\), \(MUP\), and \(MU\).
+Making the identification of \(MU[6, \infty)\)--orientations with \(\Theta\)--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with \(MU[6, \infty)\) in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of \(MUP\) and \(MU\)---and use this to make an analysis of \(M\SU\).  In particular, we rely heavily on the results from \Cref{ComplexBordismChapter} and \Cref{ChapterFiniteSpectra} to understand the co/homological behaviors of \(BU \times \Z\), \(BU\), \(MUP\), and \(MU\), which we employ as traction in understanding \(BSU\) and \(MSU\).
 
 The coherence of all of these statements gives us very explicit target theorems to aim for in our study of \(MU[6, \infty)\), but we are forced to approach them from a different vantage point: whereas we can prove a splitting principle for \(\SU\)--bundles, the analogous statement for \(U[5, \infty)\)--bundles does not appear to admit a direct proof.  Consequently, the proofs of the other structure theorems for \(BU[6, \infty)\) and \(MU[6, \infty)\) are made considerably more complicated because we have to work with our splitting principle hands tied.  Instead, our main tools are the results developed in \Cref{UnstableCooperationsChapter}, which give us direct access to the co/homology of the layers of the Postnikov tower.  When the dust of all this settles, we will have arrived at a very satisfying and complete theory of \(MU[6, \infty)\)--orientations, applicable to an arbitrary complex-orientable cohomology theory.
 
@@ -24,7 +24,7 @@ We also give a short r\'esum\'e on the theory of elliptic curves in \Cref{Sectio
 
 We will now finally address a point that we have long let slide: in the first third of this book we were primarily interested in the formal scheme associated to the \emph{cohomology} of a space, but in the second third we were primarily interested in a construction converting the \emph{homology} of a spectrum to a sheaf over a context.  Our goal for this Lecture is to, when possible, put these two variances on even footing.  Our motivation for putting this lingering discrepancy to rest is more technical than aesthetic: we have previously wanted access to certain colimits of formal schemes (e.g., in \Cref{DivConstructionsAreFree}).  While such colimits are generally forbidding, similarly to colimits of manifolds, we will in effect produce certain conditions under which they are accessible.
 
-For \(E\) a ring spectrum and \(X\) a space, the diagonal map \(\Delta\co X \to X \times X\) induces a multiplication map on \(E\)--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying \(E\)--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case where that map is an isomorphism, the long composite induces the structure of an \index{comodule!coalgebra}\(E_*\)--coalgebra on \(E_* X\).  In the most generous case that \(E\) is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, \(E^* X\) is functorially the linear dual of \(E_* X\).  This motivates us to consider the following purely algebraic construction:
+For \(E\) a ring spectrum and \(X\) a space, the diagonal map \(\Delta\co X \to X \times X\) induces a multiplication map on \(E\)--cohomology via the composite \[E^* X \otimes_{E^*} E^* X \xrightarrow{\text{K\"unneth}} E^*(X \times X) \xrightarrow{E^* \Delta} E^* X.\]  Dually, applying \(E\)--homology, we have a pair of maps \[E_* X \xrightarrow{E_* \Delta} E_*(X \times X) \xleftarrow{\text{K\"unneth}} E_* X \otimes_{E_*} E_* X,\] where, remarkably, the K\"unneth map goes the wrong way to form a composite.  In the case where that map is an isomorphism, the long composite induces the structure of an \index{comodule!coalgebra}\(E_*\)--coalgebra on \(E_* X\).  In the most generous case that \(E\) is a field spectrum (in the sense of \Cref{FieldSpectraAreKTheories}), the K\"unneth map is always invertible and, moreover, \(E^* X\) is functorially the linear dual of \(E_* X\).  By taking our definition of the formal scheme (associated to a space) and dualizing it, we are motivated to consider the following purely algebraic construction:
 
 \begin{definition}
 Let \(C\) be a coalgebra over a field \(k\).  We define a functor\index{scheme!coalgebraic!Sch@\(\Sch\)}
@@ -53,7 +53,7 @@ For \(C\) a coalgebra over a field \(k\), any finite--dimensional \(k\)--linear 
 \noindent This result allows us to leverage our duality Lemma pointwise: for an arbitrary \(k\)--coalgebra, we break it up into a lattice of finite \(k\)--coalgebras, and take their linear duals to get a reversed lattice of finite \(k\)--algebras.  Altogether, this indicates that \(k\)--coalgebras generally want to model \emph{formal schemes}.
 
 \begin{corollary}\label{CoalgsAndFSchsAgreeOverk}
-For \(C\) a coalgebra over a field \(k\) expressed as a colimit \(C = \colim_k C_k\) of finite subcoalgebras, there is an equivalence \[\Sch C \cong \{\Spec C_k^*\}_k.\]  This induces a \emph{covariant} equivalence of categories \[\CatOf{Coalgebras}_k \cong \CatOf{FormalSchemes}_{/k}.\]  This equivalence translates between the product of formal schemes, the tensor product of pro-algebras, and the tensor product of coalgebras. \qed
+For \(C\) a coalgebra over a field \(k\) expressed as a colimit \(C = \colim_k C_k\) of finite subcoalgebras, there is an equivalence \[\Sch C \cong \{\Spec C_k^*\}_k = \Spf C^*.\]  This induces a \emph{covariant} equivalence of categories \[\CatOf{Coalgebras}_k \cong \CatOf{FormalSchemes}_{/k}.\]  This equivalence translates between the product of formal schemes, the tensor product of pro-algebras, and the tensor product of coalgebras. \qed
 \end{corollary}
 
 This covariant algebraic model for formal schemes is very useful.  For instance, this equivalence makes the following calculation trivial:
@@ -86,7 +86,7 @@ Suppose that \[F\co \CatOf I \to \CatOf{Coalgebras}_R\] is a colimit diagram of 
 When a formal scheme \(X\) is coalgebraic, the symmetric power \(X^{\times n}_{\Sigma_n}\) exists.  In fact, \(\coprod_{n \ge 0} X^{\times n}_{\Sigma n}\) models the free formal commutative monoid on \(X\).  Given an additional pointing \(\Spec R \to X\), the colimit of the induced system \[\colim \left(\cdots \to X^{\times n}_{\Sigma_n} = \Spec R \times X^{\times n}_{\Sigma_n} \to X \times X^{\times n}_{\Sigma_n} \to X^{\times(n+1)}_{\Sigma_{n+1}} \to \cdots\right)\] models the free formal commutative monoid on the pointed formal scheme.
 \end{corollary}
 \begin{proof}[Proof sketch]
-The main points entirely mirror the case over a field: the symmetric power construction gives models for \(X^{\times n}_{\Sigma_n}\), the symmetric algebra construction gives a model for the free formal commutative monoid, and the stabilization against the pointing is modeled by inverting an element in the symmetric algebra.  In each case, choosing a good basis for the coalgebra underlying \(X\) yields choices of good bases for the coalgebras arising from these constructions, essentially because their elements are crafted out of finite combinations of the elements of the original.
+The main points entirely mirror the case over a field: the symmetric power coalgebra construction gives models for \(X^{\times n}_{\Sigma_n}\), the total symmetric power Hopf algebra gives a model for the free formal commutative monoid, and the stabilization against the pointing is modeled by inverting an element in the symmetric algebra.  In each case, choosing a good basis for the coalgebra underlying \(X\) yields choices of good bases for the coalgebras arising from these constructions, essentially because their elements are crafted out of finite combinations of the elements of the original.
 \end{proof}
 
 In the specific case that \(\Spec R \to X\) is a pointed formal \emph{curve}, we can prove something more:
@@ -94,7 +94,7 @@ In the specific case that \(\Spec R \to X\) is a pointed formal \emph{curve}, we
 For \(\Spec R \to X\) a pointed formal curve, the free formal commutative monoid is automatically an abelian group.
 \end{corollary}
 \begin{proof}[Proof sketch]
-The main idea is that the coalgebra associated to a formal curve admits an increasing filtration \(F_k\) so that the reduced diagonal \(\overline \Delta = \Delta - (1 \otimes \eta) - (\eta \otimes 1)\) reduces filtration degree: \[\overline \Delta|_{F_k}\co F_k \to \sum_{\substack{i,j > 0 \\ i+j=k}} F_i \otimes F_j.\]  In turn, the symmetric algebra on the coalgebra associated to a formal curve inherits enough of this filtration that one can iteratively solve for a \index{Hopf algebra}Hopf algebra antipode.
+The main idea is that the coalgebra associated to a formal curve admits an increasing filtration \(F_k\) so that the reduced diagonal \[\overline \Delta = \Delta - (1 \otimes \eta) - (\eta \otimes 1)\] reduces filtration degree: \[\overline \Delta|_{F_k}\co F_k \to \sum_{\substack{i,j > 0 \\ i+j=k}} F_i \otimes F_j.\]  In turn, the symmetric algebra on the coalgebra associated to a formal curve inherits enough of this filtration that one can iteratively solve for a \index{Hopf algebra}Hopf algebra antipode.
 \end{proof}
 
 We now reconnect this algebraic discussion with the algebraic topology that spurred it.
@@ -107,7 +107,7 @@ We have defined \(X_E\) to have the formal topology induced by the compactly gen
 \end{proof}
 
 \begin{example}[{cf.\ \Cref{KtheoryConvertsTorsionToTorsion} and \Cref{KHomologyOfClassifyingSpace}}]\label{KtheoryOfClassifyingSpace}
-For a Morava \(K\)--theory \(K_\Gamma\) associated to a formal group \(\Gamma\) of finite height, we have seen that there is an exact sequence of Hopf algebras \[K_\Gamma^0(BS^1) \xrightarrow{[p^j]} K_\Gamma^0(BS^1) \to K_\Gamma^0(BS^1[p^j]),\] presenting \((BS^1[p^j])_K\) as the \(p^j\)--torsion formal subscheme \(BS^1_K[p^j]\).  The Hopf algebra calculation also holds in \(K\)--homology, where there is instead the exact sequence \[(K_\Gamma)_0 B(S^1[p^j]) \to (K_\Gamma)_0 BS^1 \xrightarrow{(-)^{\ast p^j}} (K_\Gamma)_0 BS^1\] presenting \((K_\Gamma)_0 B(S^1[p^j])\) as the \(p^j\)--order \(\ast\)--nilpotence in the middle Hopf algebra.  Applying \(\Sch\) to this last line covariantly converts this second statement about Hopf algebras to the corresponding statement above about the associated formal schemes---i.e., the behavior of the homology Hopf algebra is a direct reflection of the behavior of the formal schemes.
+For a Morava \(K\)--theory \(K_\Gamma\) associated to a formal group \(\Gamma\) of finite height, we have seen that there is an exact sequence of Hopf algebras \[K_\Gamma^0(BS^1) \xrightarrow{[p^j]} K_\Gamma^0(BS^1) \to K_\Gamma^0(BS^1[p^j]),\] presenting \((BS^1[p^j])_K\) as the \(p^j\)--torsion formal subscheme \(BS^1_K[p^j]\).  The Hopf algebra calculation also holds in \(K\)--homology, where there is instead the exact sequence \[(K_\Gamma)_0 B(S^1[p^j]) \to (K_\Gamma)_0 BS^1 \xrightarrow{(-)^{\ast p^j}} (K_\Gamma)_0 BS^1\] presenting \((K_\Gamma)_0 B(S^1[p^j])\) as the \(p^j\)--order \(\ast\)--nilpotence in the middle Hopf algebra.  Applying \(\Sch\) to this last line covariantly converts this second statement about Hopf algebras to the corresponding statement above about the associated formal schemes---i.e., the behavior of the homology Hopf algebra is a covariant avatar of the behavior of the formal schemes.
 \end{example}
 
 The example above, where the space in question is an \(H\)--space, also spurs us to consider a certain ``wrong-way'' operation.  We have seen that the algebra structure of the \(K\)--cohomology of a space and the coalgebra structure of the \(K\)--homology of the same space contain equivalent data: they both give rise to the same formal scheme.  However, in the case of a commutative \(H\)--space, the \(K\)--homology and \(K\)--cohomology give \emph{commutative and cocommutative Hopf algebras}.  Hence, in addition to considering the coalgebraic formal scheme \(\Sch (K_\Gamma)_0 B(S^1[p^j])\), we can also consider the affine scheme \(\Spec (K_\Gamma)_0 B(S^1[p^j])\).  This, too, should contain identical information, and this is the subject of Cartier duality.
@@ -117,10 +117,10 @@ The \index{Cartier dual}\textit{Cartier dual} of a commutative finite group sche
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 6.19]{StricklandFSFG}}]
-Let \(\G\) be a coalgebraic commutative formal group over a formal scheme \(X\), and write \(\mathbb H = \Spec \sheaf O_{\G}^*\) for the group scheme associated to its dual Hopf algebra.  Cartier duality then has the effects \(D\G = \mathbb H\) and \(D\mathbb H = \G\).
+Let \(\G\) be a coalgebraic formal group over a formal scheme \(X\), and write \(\mathbb H = \Spec \sheaf O_{\G}^*\) for the group scheme associated to its dual Hopf algebra.  Cartier duality then has the effects \(D\G = \mathbb H\) and \(D\mathbb H = \G\).
 \end{lemma}
 \begin{proof}
-We show that the first two objects, \(D\G\) and \(\mathbb H\), represent the same object.  A point \((u, f) \in D\G(T)\) is specified by a pair of functions \[\left(u\co \Spec T \to X, f\co u^* \G \to u^*(\Gm \times X)\right).\]  The map \(f\) is equivalent to a map of Hopf algebras \(f^*\co T[u^\pm] \to \sheaf O_{\G} \otimes_{\sheaf O_X} T\), which is determined by its value \(f^*(u) \in \sheaf O_{\G} \otimes_{\sheaf O_X} T\), which must satisfy the two relations \(\Delta(f^* u) = f^* u \otimes f^* u\) and \(\eps(f^* u) = 1\).  Invoking linear duality, \(f^* u\) can also be considered as an element of \(\CatOf{Modules}_{\sheaf O_X}(\sheaf O_{\G}^*, T)\), and the two relations on \(f^* u\) show that it lands in the subset \[f^* u \in \CatOf{Algebras}_{\sheaf O_X /}(\sheaf O_{\G}^*, T) \subseteq \CatOf{Modules}_{\sheaf O_X}(\sheaf O_{\G}^*, T).\]  This assignment is invertible, and the proof is entirely similar for \(D \mathbb H \cong \G\).
+We show that the first two objects, \(D\G\) and \(\mathbb H\), represent the same object.  A point \(f \in D\G(t\co \Spec T \to S)\) is specified by a function \[f\co t^* \G \to t^*(\Gm \times X).\]  The map \(f\) is equivalent to a map of Hopf algebras \(f^*\co T[u^\pm] \to \sheaf O_{\G} \otimes_{\sheaf O_X} T\), which is determined by its value \(f^*(u) \in \sheaf O_{\G} \otimes_{\sheaf O_X} T\), which must satisfy the two relations \(\Delta(f^* u) = f^* u \otimes f^* u\) and \(\eps(f^* u) = 1\).  Invoking linear duality, \(f^* u\) can also be considered as an element of \(\CatOf{Modules}_{\sheaf O_X}(\sheaf O_{\G}^*, T)\), and the two relations on \(f^* u\) show that it lands in the subset \[f^* u \in \CatOf{Algebras}_{\sheaf O_X /}(\sheaf O_{\G}^*, T) \subseteq \CatOf{Modules}_{\sheaf O_X}(\sheaf O_{\G}^*, T).\]  This assignment is invertible, and the proof is entirely similar for \(D \mathbb H \cong \G\).
 \end{proof}
 
 \begin{remark}[{\cite[pg.\ 72]{Demazure}}]
